# stp

./: .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Packages.cmake  README.md  common.cc  convert.cc  count.cc  find.cc  join.cc  remove.cc  replace.cc  split.cc  sub.cc
.github/workflows/: cmake.yml
fuzzer/: CMakeLists.txt  fuzz_tester.cpp
include/text_processing/: common.hpp  convert.hpp  count.hpp  find.h  find.hpp  join.hpp  remove.hpp  replace.hpp  split.hpp  sub.hpp
